Added the 'edit note feature' and modified landing page button dynamically

--- a/templates/notes.html
+++ b/templates/notes.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load social_share %}
 
 {% block body %}
 
@@ -8,7 +9,7 @@
     {% for note in mynotes  %}
          
    <div class="col">
-    <a href="{% url 'view_note' note.owner.username note.slug %}" class="text-decoration-none ">
+    <a href="{{note.get_absolute_url}}" class="text-decoration-none ">
         
     <div class="card shadow-sm border-success mb-3 " >
         <div class="card-header bg-transparent border-success text-dark"><small>Added: {{note.date_created}}</small></div>
@@ -17,7 +18,18 @@
           <h6 class="card-title">{{note.title|truncatechars:"23"}}</h6>
           <p class="card-text">{{note.body |truncatechars:"70"}}</p>
         </div>
-        <div class="card-footer bg-transparent border-success text-dark"><small>Updated: {{note.date_updated}}</small></div>
+        <div class="card-footer bg-transparent border-success text-dark">
+          <small>
+          {% post_to_facebook note.get_absolute_url "Post to Facebook!" %}
+{% post_to_twitter "New note: {{note.title}}. Check it out!" note.get_absolute_url "Post to Twitter" %}
+
+{% post_to_whatsapp note.get_absolute_url "Share via WhatsApp" %}
+
+{% copy_to_clipboard note.get_absolute_url "Copy to clipboard!" %}
+
+
+</small>
+        </div>
       </div>
     </a>
    </div>
@@ -40,6 +52,8 @@
         </ul>
       </nav>
    
+      {% add_copy_script %}
+      {% add_pinterest_script %} 
       
 {% endblock body %}
   
