--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,14 @@
           <p class="lead">{% lorem 1 p %}</p>
           <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
             <a href="{% url 'register' %}" type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold">Start creating notes</a>
+            
+            {% if request.user.is_authenticated %}
+            <a href="{% url 'notes' %}" type="button" class="btn btn-outline-success btn-lg px-4">See Your Notes</a>
+              {% else %}
             <a href="{% url 'signin' %}" type="button" class="btn btn-outline-success btn-lg px-4">Login</a>
+
+            {% endif %}
+              
           </div>
         </div>
         <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
