Fixed ckeditor issue and modified django-social-share template

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,9 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diary Freak</title>
+    <link rel="stylesheet" href="{% static 'css/font-awesome.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'js/bootstrap.bundle.min.js' %}">
-</head>
+  
+    
+
+  </head>
 <body>
 
 
@@ -45,13 +49,26 @@
           </nav>
 
           
+          {% if messages %}
+            
+            {% for message in messages  %}
+          <div class="container py-3 text-white my-1 bg-{{message.tags}}" >{{message}}</div>
+              
+            {% endfor %}
+              
+          {% endif %}
+            
+          
           {% block body %}
             
           {% endblock body %}
             
 
                    
-</div>
+
+
+
+        </div>
 
 </body>
 </html>
