--- a/templates/readnote.html
+++ b/templates/readnote.html
@@ -12,17 +12,22 @@
         
 </div>
 
+<span class="fa fa-facebook-square"></span>
+
+
 <div class="container d-flex">
-{% copy_to_clipboard item_to_read.get_absolute_url "Copy to clipboard!" %}
-        {% post_to_facebook item_to_read.get_absolute_url "Post to Facebook!" %}
-{% post_to_twitter "New note: {{item_to_read.title}}. Check it out!" item_to_read.get_absolute_url "Post to Twitter" %}
-{% post_to_whatsapp item_to_read.get_absolute_url "Share via WhatsApp" %}
-        {% post_to_gplus item_to_read.get_absolute_url "Post to Google+!" %}
-{% post_to_linkedin item_to_read.get_absolute_url %}
-{% send_email item_to_read.title "New note: {{item_to_read.title}}. Check it out!" item_to_read.get_absolute_url "Share via email" %}
-{% post_to_reddit "New note: {{item_to_read.title}}" item_to_read.get_absolute_url %}
-{% post_to_telegram "New note: {{item_to_read.title}}" item_to_read.get_absolute_url %}
-{% save_to_pinterest item_to_read.get_absolute_url %}
+
+{% post_to_facebook item_to_read.get_absolute_url  %} &nbsp;&nbsp;
+{% post_to_twitter "New note: {{item_to_read.title}}. Check it out!" item_to_read.get_absolute_url "Post to Twitter" %} &nbsp;&nbsp;
+{% post_to_whatsapp item_to_read.get_absolute_url "Share via WhatsApp" %} &nbsp;&nbsp;
+        {% post_to_gplus item_to_read.get_absolute_url "Post to Google+!" %} &nbsp;&nbsp;
+{% post_to_linkedin item_to_read.get_absolute_url %} &nbsp;&nbsp;
+{% send_email item_to_read.title "New note: {{item_to_read.title}}. Check it out!" item_to_read.get_absolute_url "Share via email" %} &nbsp;&nbsp;
+{% post_to_reddit "New note: {{item_to_read.title}}" item_to_read.get_absolute_url %} &nbsp;&nbsp;
+{% post_to_telegram "New note: {{item_to_read.title}}" item_to_read.get_absolute_url %} &nbsp;&nbsp;
+{% save_to_pinterest item_to_read.get_absolute_url %} &nbsp;&nbsp;
+
+
 </div>
 <div class="container card text-center my-5">
 
