--- a/templates/editnote.html
+++ b/templates/editnote.html
@@ -26,7 +26,7 @@
         <div class="row mb-3">
           <label for="body" class="col-sm-2 col-form-label">Note</label>
           <div class="col-sm-10">
-            <textarea name="body"  class="form-control"  rows="7">{{note_to_edit.body}}</textarea>
+            <textarea name="body"  class="form-control"  rows="7">{{note_to_edit.body | safe}}</textarea>
           </div>
         </div>
       
